# dictado

./: .gitignore  CHANGELOG.md  GETTING_STARTED.md  PLAN.md  README.md  config.default.toml  pyproject.toml
app/: config.py  events.py  main.py  models.py
app/core/: hotkey.py  injector.py  language.py  pipeline.py  recorder.py
app/learning/: hints.py  prompts.py
app/providers/llm/: __init__.py  base.py  gemini.py  groq.py  ollama.py  registry.py  utils.py
app/providers/stt/: __init__.py  base.py  faster_whisper.py  registry.py
app/storage/: corrections.py  db.py  history.py  vocabulary.py
app/ui/: config_window.py  overlay.py  qt_bridge.py  tray.py
app/ui/widgets/: __init__.py  hotkey_input.py  profile_editor.py
app/utils/: audio_devices.py  hardware.py  logging.py  paths.py  runtime.py  timing.py  whisper_models.py
tests/: test_llm_utils.py
