[project]
name = "dictado"
version = "0.1.0"
description = "Sistema de dictado por voz local-first para Windows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faster-whisper>=1.2.1",
    "httpx>=0.25",
    "loguru>=0.7",
    "numpy>=1.26",
    "pynput>=1.7.6",
    "pydantic>=2.5",
    "PyQt6>=6.8",
    "pywin32>=308",
    "qtawesome>=1.4",
    "scipy>=1.13",
    "sounddevice>=0.4.6",
    "tomli-w>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "pyinstaller>=6.0",
]

[tool.uv]
package = false

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]
